--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,3 @@
-.backdrop {
-  display: none;
-}
 /* reset */
 a {
   text-decoration: none;
@@ -150,6 +147,11 @@ body {
 .burger-menu-btn {
   border: none;
   background-color: transparent;
+  transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.burger-menu-btn:hover .menu-icon-btn,
+.burger-menu-btn:focus .menu-icon-btn {
+  stroke: #404bbf;
 }
 .page-list {
   display: none;
@@ -716,7 +718,6 @@ body {
 }
 @media screen and (min-width: 1158px) {
   .page-footer {
-    background-color: #2e2f42;
     padding-top: 100px;
     padding-bottom: 100px;
   }
@@ -728,15 +729,15 @@ body {
 }
 @media screen and (min-width: 768px) {
   .footer-container {
-    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    column-gap: 24px;
+    row-gap: 72px;
   }
 }
 @media screen and (min-width: 1158px) {
   .footer-container {
-    display: flex;
-    align-items: baseline;
-    flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
   }
 }
 
@@ -754,14 +755,6 @@ body {
 }
 @media screen and (min-width: 1158px) {
   .footer-logo {
-    font-family: "Raleway", sans-serif;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #4d5ae5;
-    margin-bottom: 16px;
     display: inline-block;
   }
 }
@@ -782,13 +775,18 @@ body {
 .footer-logo-wrapper-container {
   margin-bottom: 72px;
 }
-@media screen and (min-width: 1158px) {
+@media screen and (min-width: 768px) {
   .footer-logo-wrapper-container {
-    margin-right: 120px;
+    margin: 0;
   }
 }
 .footer-social-wrapper {
   margin-bottom: 72px;
+}
+@media screen and (min-width: 768px) {
+  .footer-social-wrapper {
+    margin: 0;
+  }
 }
 
 .footer-social-title {
@@ -843,13 +841,6 @@ body {
   fill: #f4f4fd;
 }
 
-.footer-form-wrapper {
-}
-@media screen and (min-width: 1158px) {
-  .footer-form-wrapper {
-    margin-left: 80px;
-  }
-}
 .footer-form-title {
   font-weight: 500;
   line-height: 1.5;
@@ -859,13 +850,9 @@ body {
   display: block;
   text-align: center;
 }
-@media screen and (min-width: 1158px) {
+@media screen and (min-width: 768px) {
   .footer-form-title {
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #fff;
-    margin-bottom: 16px;
+    text-align: left;
   }
 }
 
@@ -875,14 +862,10 @@ body {
   flex-direction: column;
   align-items: center;
 }
-@media screen and (min-width: 1158px) {
+@media screen and (min-width: 768px) {
   .footer-form {
-    display: flex;
-    gap: 24px;
+    flex-direction: row;
   }
-}
-
-.footer-label {
 }
 
 .footer-input {
@@ -969,10 +952,16 @@ body {
     0 2px 1px 0 #00000033;
   background: #fcfcfc;
   border-radius: 4px;
-  width: 408px;
-  min-height: 584px;
+  width: 288px;
+  min-height: 623px;
   padding: 72px 24px 24px 24px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 768px) {
+  .modal {
+    width: 408px;
+    min-height: 584px;
+  }
 }
 
 .modal-close-btn {
@@ -1181,4 +1170,110 @@ body {
 .modal-send-button:hover,
 .modal-send-button:hover {
   background-color: #404bbf;
+}
+
+/* BURGER-MENU */
+@media screen and (min-width: 768px), (min-width: 1158px) {
+  .burger-menu {
+    display: none;
+  }
+}
+
+.burger-menu {
+  position: fixed;
+  background-color: #2e2f4266;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.burger-menu-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: 0 1px 1px 0 #00000024, 0 1px 3px 0 #0000001f,
+    0 2px 1px 0 #00000033;
+  background: #fcfcfc;
+  border-radius: 4px;
+  width: 320px;
+  min-height: 640px;
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-top: 72px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.menu-nav {
+}
+.menu-list {
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 111%;
+  letter-spacing: 0.02em;
+  margin-bottom: 168px;
+}
+.menu-list-item {
+  margin-bottom: 40px;
+}
+.menu-list-link {
+}
+
+.menu-address-link:hover,
+.menu-address-link:focus {
+  color: #404bbf;
+}
+
+.menu-address {
+}
+.menu-address-list {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+  gap: 24px;
+  margin-bottom: 48px;
+}
+.menu-address-item {
+}
+.menu-address-link {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.menu-social-link-container {
+  display: flex;
+  justify-content: space-around;
+}
+.menu-social-link {
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: 100%;
+  height: 100%;
+}
+
+.menu-social-link:hover,
+.menu-social-link:focus {
+  background-color: #404bbf;
+}
+
+.menu-icons {
+  fill: #f4f4fd;
+}
+.menu-social-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+}
+.menu-social-list-item {
+  width: 40px;
+  height: 40px;
 }
