--- a/css/styles.css
+++ b/css/styles.css
@@ -228,6 +228,22 @@ body {
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (min-width: 768px) {
+  .address-link {
+    font-size: 12px;
+
+    line-height: 117%;
+    letter-spacing: 0.04em;
+  }
+}
+@media screen and (min-width: 1158px) {
+  .address-link {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+  }
+}
 
 .address-link:hover,
 .address-link:focus {
@@ -753,6 +769,11 @@ body {
   display: block;
   text-align: center;
 }
+@media screen and (min-width: 768px) {
+  .footer-logo {
+    text-align: left;
+  }
+}
 @media screen and (min-width: 1158px) {
   .footer-logo {
     display: inline-block;
@@ -839,6 +860,16 @@ body {
 
 .footer-icons {
   fill: #f4f4fd;
+}
+@media screen and (min-width: 768px) {
+  .footer-form-wrapper {
+    margin-right: 30px;
+  }
+}
+@media screen and (min-width: 1158px) {
+  .footer-form-wrapper {
+    margin: 0;
+  }
 }
 
 .footer-form-title {
@@ -939,8 +970,8 @@ body {
 }
 
 .is-open {
-  /* opacity: 1;
-  pointer-events: auto; */
+  opacity: 1;
+  pointer-events: auto;
 }
 
 .modal {
@@ -1181,7 +1212,7 @@ body {
 
 .burger-menu {
   position: fixed;
-  background-color: #2e2f4266;
+  background: #fcfcfc;
   top: 0;
   left: 0;
   width: 100%;
@@ -1191,6 +1222,10 @@ body {
   pointer-events: none;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.is-open {
+  opacity: 1;
+  pointer-events: auto;
 }
 .burger-menu-container {
   position: absolute;
@@ -1208,6 +1243,28 @@ body {
   padding-top: 72px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.menu-close-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 24px;
+  height: 24px;
+  fill: #2e2f42;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 0;
+}
+.menu-close-btn:hover,
+.menu-close-btn:focus {
+  background-color: #404bbf;
+  border: none;
+  fill: #ffffff;
+}
 .menu-nav {
 }
 .menu-list {
@@ -1222,10 +1279,10 @@ body {
   margin-bottom: 40px;
 }
 .menu-list-link {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.menu-address-link:hover,
-.menu-address-link:focus {
+.menu-list-link:hover,
+.menu-list-link:focus {
   color: #404bbf;
 }
 
@@ -1240,9 +1297,19 @@ body {
   margin-bottom: 48px;
 }
 .menu-address-item {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 120%;
+  letter-spacing: 0.02em;
+  color: #434455;
 }
 .menu-address-link {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.menu-address-link:hover,
+.menu-address-link:focus {
+  color: #404bbf;
 }
 .menu-social-link-container {
   display: flex;
